--- a/package.json
+++ b/package.json
@@ -141,7 +141,7 @@
     "buffer": "^6.0.3",
     "datastore-core": "^6.0.7",
     "delay": "^5.0.0",
-    "interop-libp2p": "^0.4.0",
+    "interop-libp2p": "git+ssh://git@github.com/vigas-self/interop.git#custom-libp2p-dep",
     "into-stream": "^7.0.0",
     "ipfs-http-client": "^52.0.2",
     "it-concat": "^2.0.0",
